fix: favicon added & extra spacing after footer removed

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -269,17 +269,6 @@ section {
   display: none;
 }
 
-.img-profile {
-  /* width: 100px;
-	height: 200px;
-	border-radius: 75%; */
-  height: 150px;
-  width: 150px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-}
-
 .bg {
   position: relative;
   min-height: 100vh;
@@ -494,204 +483,6 @@ header.sticky ul li.activeColor a {
   margin-top: 60px;
 }
 /*End About*/
-
-/*Start Services*/
-.services {
-  background: #111;
-}
-.heading.white {
-  color: #fff;
-}
-.heading.black {
-  background-color: white;
-  color: #111;
-}
-.services .content {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  flex-direction: row;
-}
-.services .content .servicesBx {
-  padding: 40px 20px;
-  background: #222;
-  color: #fff;
-  max-width: 340px;
-  margin: 20px;
-  text-align: center;
-  transition: 0.5s;
-}
-.services .content .servicesBx:hover {
-  background: #2196f3;
-}
-.services .content .servicesBx img {
-  max-width: 80px;
-  filter: invert(1);
-}
-.services .content .servicesBx h2 {
-  font-size: 20px;
-  font-weight: 600;
-  margin-bottom: 15px;
-  margin-top: 7px;
-}
-.services .content .servicesBx p {
-  line-height: 1.5;
-}
-/*End Services*/
-
-/*Start Blogs*/
-.blogs {
-  background: #111;
-  /* background: #FFF; */
-}
-.heading.white {
-  color: #fff;
-}
-
-/*Start Contact*/
-.contact {
-  background: #111;
-}
-.contact .formBx {
-  min-width: 60%;
-}
-.formBx form {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-}
-.formBx form h3,
-.contactInfo h3 {
-  color: #fff;
-  font-size: 20px;
-  font-weight: 500;
-  margin-bottom: 10px;
-}
-.formBx form h3 {
-  margin-bottom: 15px;
-}
-.formBx form input,
-.formBx form textarea {
-  margin-bottom: 20px;
-  padding: 15px;
-  font-size: 16px;
-  border: none;
-  outline: none;
-  background: #222;
-  color: #fff;
-  resize: none;
-}
-.formBx form input[type="email"] {
-  padding-right: 50px;
-}
-.formBx form .indicator {
-  position: absolute;
-  top: 125px;
-  right: 20px;
-  width: 10px;
-  height: 10px;
-  background-color: #555;
-  border-radius: 50%;
-}
-form.valid .indicator {
-  background-color: #0f0;
-  box-shadow: 0 0 5px #0f0, 0 0 10px #0f0, 0 0 20px #0f0, 0 0 40px #0f0;
-}
-form.invalid .indicator {
-  background-color: #f00;
-  box-shadow: 0 0 5px #f00, 0 0 10px #f00, 0 0 20px #f00, 0 0 40px #f00;
-}
-.formBx form textarea {
-  min-height: 200px;
-}
-.formBx form input::placeholder,
-.formBx form textarea::placeholder {
-  color: #999;
-}
-.formBx form input[type="submit"] {
-  max-width: 100px;
-  background: #2196f3;
-  cursor: pointer;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
-.formBx form input[type="submit"]:hover {
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-  box-shadow: 0 0 5px #2196f3, 0 0 20px #2196f3, 0 0 40px #2196f3;
-}
-.contactInfo {
-  min-width: 40%;
-}
-.contactInfoBx {
-  position: relative;
-}
-.contactInfoBx .box {
-  position: relative;
-  padding: 20px 0;
-  display: flex;
-}
-.contactInfoBx .box .icon {
-  min-width: 40px;
-  padding-top: 4px;
-  color: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  font-size: 24px;
-}
-.contactInfoBx .box .text {
-  display: flex;
-  margin-left: 20px;
-  font-size: 16px;
-  color: #fff;
-  flex-direction: column;
-  font-weight: 300;
-}
-.contactInfoBx .box .text p {
-  font-size: 13px;
-}
-.contactInfoBx .box .text h3 {
-  font-weight: 500;
-  color: #2196f3;
-}
-.contactInfoBx .box .text .anchor {
-  font-weight: 500;
-  /* color: #2196f3; */
-  color: #fff !important;
-  margin-top: 5px;
-  /* text-decoration: none; */
-  font-size: 20px;
-}
-.contactInfoBx .box .socialtext {
-  display: inline-block;
-}
-.contactInfoBx .box .socialtext .socialContact {
-  margin-left: 10px;
-  cursor: pointer;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-  color: #fff;
-}
-.contactInfoBx .box .socialtext .fa-facebook {
-  margin-left: 0;
-}
-.contactInfoBx .box .socialtext .socialContact:hover {
-  color: #2196f3;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-  font-size: 35px;
-}
 
 .footer {
 	background-color: #000;
